--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="andy" /></head><body><header class="site-header" role="banner"></header>
 <div class="welcome-section">   
     <div class="welcome-section">   
         <div class="post-thumb"><img src="assets\display-picture.jpg" width = 200 alt="Display Picture" id="display-pic"/></div>
