--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,7 +43,7 @@ nav ul li a:hover {
   color: #ababab;
 }
 
-/* about me */
+/* welcome-section*/
 
 .welcome-section {
   background: #FF9C9C;
@@ -52,22 +52,21 @@ nav ul li a:hover {
   padding-top: 0.5%;
   padding-bottom: 0.5%;
   margin-top: 5%;
-  margin-left: 30%;
-  margin-right: 25%;
+  margin-left: 15%;
+  margin-right: 10%;
 }
-
 
 div.post-content {
   text-align: left;
-  float:center;
+  float: center;
   z-index:1;
   margin-top: auto;
   margin-bottom: auto;
 }
 
 div.post-thumb{
-  margin-left: -15%;
-  margin-right: 20px;
+  margin-left: -30%;
+  margin-right: 30px;
   margin-top: auto;
   margin-bottom: auto;
   z-index: 1;
@@ -77,12 +76,12 @@ img#display-pic{
   border-radius: 50%;
   max-width: 300px;
   width: 100%;
-  height:auto;
+  height: auto;
 }
 
 h3.post-title{
-  font-weight: 700;
-  font-size: 5vw;
+  font-weight: 600;
+  font-size: 4vw;
   color : #000;
   font-family: Helvetica;
   margin-bottom:10px;
@@ -92,6 +91,6 @@ div.post-content > p{
   font-size: 1.17vw;
   color : #000;
   font-family: "Nunito";
-  margin-bottom: 2%;
-  margin-right: 5%
+  margin-bottom: 5%;
+  margin-right: 2%
 }
