--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,11 +49,11 @@ nav ul li a:hover {
   background: #FF9C9C;
   background-blend-mode: lighten;
   display: flex;
-  padding-top: 0.5%;
+  padding-top: 0%;
   padding-bottom: 0.5%;
   margin-top: 5%;
-  margin-left: 15%;
-  margin-right: 10%;
+  margin-left: 30%;
+  margin-right: 25%;
 }
 
 div.post-content {
@@ -65,7 +65,7 @@ div.post-content {
 }
 
 div.post-thumb{
-  margin-left: -30%;
+  margin-left: -100%;
   margin-right: 30px;
   margin-top: auto;
   margin-bottom: auto;
@@ -91,6 +91,5 @@ div.post-content > p{
   font-size: 1.17vw;
   color : #000;
   font-family: "Nunito";
-  margin-bottom: 5%;
-  margin-right: 2%
+  /* margin-right: 0 */
 }
