--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,10 +50,13 @@ nav ul li a:hover {
   background-blend-mode: lighten;
   display: flex;
   padding-top: 0%;
-  padding-bottom: 0.5%;
-  margin-top: 5%;
+  padding-bottom: 1.25%;
+  margin-top: 2.5%;
+  margin-bottom: 0%;
+
   margin-left: 30%;
   margin-right: 25%;
+  
 }
 
 div.post-content {
@@ -62,10 +65,11 @@ div.post-content {
   z-index:1;
   margin-top: auto;
   margin-bottom: auto;
+  margin-right: -50%
 }
 
 div.post-thumb{
-  margin-left: -100%;
+  margin-left: -90%;
   margin-right: 30px;
   margin-top: auto;
   margin-bottom: auto;
@@ -74,7 +78,7 @@ div.post-thumb{
 
 img#display-pic{
   border-radius: 50%;
-  max-width: 300px;
+  max-width: 230px;
   width: 100%;
   height: auto;
 }
@@ -91,5 +95,5 @@ div.post-content > p{
   font-size: 1.17vw;
   color : #000;
   font-family: "Nunito";
-  /* margin-right: 0 */
+  margin-right: 30px;
 }
